--- a/src/editor/components/sidebar/styles.scss
+++ b/src/editor/components/sidebar/styles.scss
@@ -10,7 +10,7 @@
   right: 0;
   top: 0;
   width: $sidebar-width;
-  z-index: z-index(".edit-site-sidebar");
+  z-index: 10000;
 
   @include break-small() {
 	-webkit-overflow-scrolling: touch;
